--- a/app/assets/stylesheets/blocks/_mobile-global-nav.sass
+++ b/app/assets/stylesheets/blocks/_mobile-global-nav.sass
@@ -18,7 +18,7 @@
 
 .mobile-global-nav__link
   +block-link
-  +text-block(1rem 1.5, $text)
+  +text-block(1rem 1.5, $default-text)
   +padding(vertical, .5rem)
   +padding(horizontal, 1rem)
   border-bottom: #ccc solid .0625rem
