--- a/app/assets/stylesheets/blocks/_tab-nav.sass
+++ b/app/assets/stylesheets/blocks/_tab-nav.sass
@@ -1,22 +1,22 @@
 .tab-nav
-  background-color: #1E88E5
-  margin-bottom: 2rem
+  background-color: #3198a7
+  margin-bottom: 1.5rem
 .tab-nav__items
   display: flex
   overflow-x: auto
   overflow-y: hidden
 .tab-nav__item
-  margin-right: .5rem
+  margin-right: .25rem
   &:last-child
     margin-right: 0
   +media-breakpoint-down(sm)
     margin-right: 0
 .tab-nav__item-link
   +block-link
-  +padding(horizontal, 2rem)
-  +border(top horizontal, 1px solid $background-color)
-  +text-block(1rem 2.8, $reversal-text)
+  +padding(horizontal, 1.5rem)
+  +border(top horizontal, .0625rem solid $background-color)
+  +text-block(.875rem 2.4, $reversal-text)
   white-space: nowrap
   &.is-active
     background-color: $background-color
-    color: $text
+    color: $default-text
