--- a/app/assets/stylesheets/blocks/_user.sass
+++ b/app/assets/stylesheets/blocks/_user.sass
@@ -1,16 +1,2 @@
-.users-item
-  margin-bottom: 2rem
-.users-item__header
-  +position(relative)
-  padding-left: 2.5rem
-.users-item__name
-  padding-left: 1rem
-.users-item__icon-image
-  border-radius: 50%
-  +position(absolute, left -1rem, top -.375rem)
-  +size(64px)
-  border: solid $main-color .25rem
-  background-color: white
-.users-item__name-link
-  color: $reversal-text
-  font-weight: bold
+.user
+  background-color: $base-color
