--- a/app/views/practices/index.html.slim
+++ b/app/views/practices/index.html.slim
@@ -1,19 +1,23 @@
 - title t('practices')
 header.page-header
   .container
-    h2.page-header__title
-      = t('practices')
+    .page-header__container
+      h2.page-header__title
+        = t('practices')
+      = link_to new_practice_path, class: 'is-button-standard-sm-secondary' do
+        i.fa.fa-plus
+        = t('new_practice')
 
 .page-body
   .container
     - @categories.each do |category|
       - if category.practices.present?
-        .card.categories-item.practices
-          .card-header
-            h2.categories-item__title= category.name
-          .card-block
+        .categories-item.practices
+          header.categories-item__header
+            h2.categories-item__title
+              = category.name
+          .categories-item__body
             .js-target-blank.is-long-text-style
               = markdown emojify(category.description)
-          .category-practices
+          .category-practices.js-category-practices
             = render category.practices
-    = link_to t('new_practice'), new_practice_path, class: 'btn btn-primary'
