--- a/app/views/users/edit.html.slim
+++ b/app/views/users/edit.html.slim
@@ -1,10 +1,20 @@
-header.page-header.is-margin-bottom-0
-  .container
-    h2.page-header__title
-      = t('editing_user')
+- content_for(:page_classes, 'no-header' 'no-footer' 'no-recent-reports')
 
-.page-body
-  .container
-    .row
-      .col-xs-12.col-sm-6.offset-sm-3
-        = render 'form', user: @user, companies: @companies
+.auth-form.is-sign-up
+  header.auth-form__header
+    h1.auth-form__title
+      = t('editing_user')
+  .auth-form__body
+    = render 'form', user: @user, companies: @companies
+  footer.auth-form__footer
+    nav.auth-form-nav
+      ul.auth-form-nav__items
+        li.auth-form-nav__item
+          = link_to root_path, class: 'auth-form-nav__item-link' do
+            | トップページ
+        li.auth-form-nav__item
+          = link_to login_path, class: 'auth-form-nav__item-link' do
+            | サインイン
+        li.auth-form-nav__item
+          = link_to login_path, class: 'auth-form-nav__item-link' do
+            | 秘密保持契約書
