--- a/app/assets/stylesheets/settings/variables/_0colors.sass
+++ b/app/assets/stylesheets/settings/variables/_0colors.sass
@@ -2,8 +2,17 @@ $main-color: #f96b3b
 $accent-color: blue
 $base-color: white
 $background-color: #e2e5dc
+
+$default-text: #464c4e
 $reversal-text: white
-$text: #272b2d
+$muted-text: #7b8386
+
+$size: #3f5256
+$side-border: #57696d
+$side-tint: #4e6165
+$side-shade: #202d30
+
+$card-header: #819093
 
 $gray-dark: #373a3c
 $gray: #55595c
@@ -17,5 +26,7 @@ $info: #7ac3d3
 $warning: #f1d635
 $danger: #dd6583
 
-$luma-contrast-bright-color: $text
+$luma-contrast-bright-color: $default-text
 $luma-contrast-dark-color: $reversal-text
+$button-checked-color: $danger
+$button-checked-icon-color: $reversal-text
