--- a/app/views/practices/show.html.slim
+++ b/app/views/practices/show.html.slim
@@ -4,46 +4,51 @@
     h1.page-header__title
       = emojify(@practice.title)
 .container
-  .card
-    .card-header
-      h2.practices-item__title= t('helpers.label.practice.description')
-    .card-block
-      .practice.js-target-blank.is-long-text-style
-        = markdown @practice.description
+  .row
+    .col-md-6
+      .card
+        .card-header
+          h2.practices-item__title= t('helpers.label.practice.description')
+        .card-block
+          .practice.js-target-blank.is-long-text-style
+            = markdown @practice.description
+          
+      .card
+        .card-header
+          h2.practices-item__title= t('helpers.label.practice.goal')
+        .card-block
+          .goal.js-target-blank.is-long-text-style
+            = markdown @practice.goal
+      
+        .buttons
+          = link_to t('edit'), edit_practice_path(@practice), class: 'btn btn-primary'
+          = link_to t('destroy'), practice_path(@practice), data: { confirm: t('are_you_sure') }, method: :delete, class: 'btn btn-danger'
+          = link_to t('back'), practices_path, class: 'btn btn-secondary'
+          button.im-stack.btn.btn-warning= '行き詰まった！'
+          javascript:
+            $(document).on('click', '.im-stack', function(){
+              var text = "#{current_user.login_name}さんが#{@practice.title}で行き詰っています！わかる方は助けてあげてください！";
+              $.post('/chat_notices', {text: text});
+              console.log('it is test');
+            });
 
-  .card
-    .card-header
-      h2.practices-item__title= t('helpers.label.practice.goal')
-    .card-block
-      .goal.js-target-blank.is-long-text-style
-        = markdown @practice.goal
-  .card
-    .card-header
-      h2.practices-item__title= t('completed_users')
-    .card-block
-      ul.completed-users
-        - @practice.completed_users.each do |user|
-          li.completed-users__user
-            = link_to user, class: "completed-users__user-link" do
-              span.completed-users__user-icon= gravatar_tag user, size: 64
-  .card
-    .card-header
-      h2.practices-item__title= t('related-reports')
-    .card-block
-      ul.related-reports
-        - @practice.reports.each do |report|
-          li.related-reports__report
-            = link_to report do
-              span=report.title
+    .col-md-6
+      .card
+        .card-header
+          h2.practices-item__title= t('related-reports')
+        .card-block
+          ul.related-reports
+            - @practice.reports.each do |report|
+              li.related-reports__report
+                = link_to report do
+                  span=report.title
 
-  .buttons
-    = link_to t('edit'), edit_practice_path(@practice), class: 'btn btn-primary'
-    = link_to t('destroy'), practice_path(@practice), data: { confirm: t('are_you_sure') }, method: :delete, class: 'btn btn-danger'
-    = link_to t('back'), practices_path, class: 'btn btn-secondary'
-    button.im-stack.btn.btn-warning= '行き詰まった！'
-    javascript:
-      $(document).on('click', '.im-stack', function(){
-        var text = "#{current_user.login_name}さんが#{@practice.title}で行き詰っています！わかる方は助けてあげてください！";
-        $.post('/chat_notices', {text: text});
-        console.log('it is test');
-      });
+      .card
+        .card-header
+          h2.practices-item__title= t('completed_users')
+        .card-block
+          - @practice.completed_users.each do |user|
+            ul.completed-users
+              li.completed-users__user
+                = link_to user, class: "completed-users__user-link" do
+                  span.completed-users__user-icon= gravatar_tag user, size: 64
