--- a/app/views/users/_form.html.slim
+++ b/app/views/users/_form.html.slim
@@ -1,22 +1,27 @@
 = form_for user do |f|
-  - if user.errors.any?
-    = error_messages_for :user
+  = render 'errors', object: @user
   .auth-form-items
     .auth-form-item
-      = f.label :login_name, class: 'auth-form-item__label'
+      = f.label :login_name, class: 'auth-form-item__label is-required'
       = f.text_field :login_name, class: 'auth-form-item__text-input'
+      .auth-form-item__help
+        p
+          | チャットやSNS（Twitter、Github、ブログ など）でユーザー名が異なると個人を認識するのが困難になります。極力ユーザー名は統一するようにしてください。
     .auth-form-item
-      = f.label :email, class: 'auth-form-item__label'
+      = f.label :email, class: 'auth-form-item__label is-required'
       = f.text_field :email, class: 'auth-form-item__text-input'
+      .auth-form-item__help
+        p
+          | このメールアドレスは卒業後の連絡にも使うので、会社で提供されたなどの第三者によって提供されたメールアドレスではなく、転職後も使い続ける自分自身で取得したメールアドレスで登録してください。
     .auth-form-item
       .row
         .col-xs-6
           .auth-form-item
-            = f.label :last_name, class: 'auth-form-item__label'
+            = f.label :last_name, class: 'auth-form-item__label is-required'
             = f.text_field :last_name, class: 'auth-form-item__text-input'
         .col-xs-6
           .auth-form-item
-            = f.label :first_name, class: 'auth-form-item__label'
+            = f.label :first_name, class: 'auth-form-item__label is-required'
             = f.text_field :first_name, class: 'auth-form-item__text-input'
     .auth-form-item
       = f.label :description, class: 'auth-form-item__label'
@@ -37,16 +42,16 @@
       = f.label :feed_url, class: 'auth-form-item__label'
       = f.text_field :feed_url, class: 'auth-form-item__text-input'
     .auth-form-item
-      = f.label :password, class: 'auth-form-item__label'
+      = f.label :password, class: 'auth-form-item__label is-required'
       = f.password_field :password, class: 'auth-form-item__text-input'
     .auth-form-item
-      = f.label :password_confirmation, class: 'auth-form-item__label'
+      = f.label :password_confirmation, class: 'auth-form-item__label is-required'
       = f.password_field :password_confirmation, class: 'auth-form-item__text-input'
       .auth-form-item__help
         p
           | パスワードをもう一度入力
     .auth-form-item
-      = f.label :purpose, class: 'auth-form-item__label'
+      = f.label :purpose, class: 'auth-form-item__label is-required'
       ul.auth-form-item__radio-buttons.is-half
         = f.collection_radio_buttons :purpose_cd, User.purposes.map {|k,v| [v, t("activerecord.enums.user.purposes.#{k}")] }, :first, :last do |b|
           li.auth-form-radio-button.is-half
@@ -70,12 +75,15 @@
       = f.collection_select :company_id, Company.all, :id, :name, {}, class: 'form-control'
 
     .auth-form-item
-      .auth-form-item__show-nda.is-text-align-center
-        .is-button-flat-emboss-xs-warning(data-target='#myModal' data-toggle='modal')
-          | 秘密保持契約内容を確認
+      label.auth-form-item__label
+        | 秘密保持契約
+      ul.auth-form-item__checkboxes
+        li.auth-form-checkbox
+          label.auth-form-checkbox__label.js-nda-action(data-target='#myModal' data-toggle='modal')
+            = t('agree_nda')
       
-  .auth-form-action.is-display-none
-    = f.submit nil, class: 'is-button-flat-emboss-sm-warning'
+  .auth-form-action.is-sign-up-action
+    = f.submit 'インターン参加する', class: 'is-button-flat-emboss-sm-warning js-sign-up-action'
 
   .modal.fade#myModal(tabindex='-1' role='dialog' aria-labelledby='myModalLabel' aria-hidden='true')
     .modal-dialog role="document" 
@@ -83,15 +91,19 @@
         .modal-header
           h2.modal-title
             | 秘密保持契約書
-          button.close aria-label="Close" data-dismiss="modal" type="button" 
-            span aria-hidden="true"  &times;
+          button.close(aria-label="Close" data-dismiss="modal" type="button")
+            span(aria-hidden="true")  &times;
         .modal-body
           .nda
             = render 'nda'
         .modal-footer.is-text-align-center
-          .nda__actions
-            ul.auth-form-item__checkboxes
-              li.auth-form-checkbox
-                label.is-button-flat-emboss-xs-warning.is-checkbox
-                  = f.check_box :nda
-                  = t('agree_nda')
+          .nda__actions-container
+            .nda__actions
+              ul.auth-form-item__checkboxes
+                li.auth-form-checkbox
+                  label.is-button-flat-emboss-xs-warning.is-checkbox.nda__action
+                    = f.check_box :nda, checked: false
+                    div= t('agree_nda')
+          
+            .nda__close(aria-label="Close" data-dismiss="modal" type="button")
+              | 閉じる
