--- a/app/views/users/new.html.slim
+++ b/app/views/users/new.html.slim
@@ -1,6 +1,20 @@
 - content_for(:page_classes, 'no-header' 'no-footer')
 
-.auth-form
-  h1.auth-form__title
-    = t('sign_up')
-  = render 'form', user: @user, companies: @companies
+.auth-form.is-sign-up
+  header.auth-form__header
+    h1.auth-form__title
+      = t('sign_up')
+  .auth-form__body
+    = render 'form', user: @user, companies: @companies
+  footer.auth-form__footer
+    nav.auth-form-nav
+      ul.auth-form-nav__items
+        li.auth-form-nav__item
+          = link_to root_path, class: 'auth-form-nav__item-link' do
+            | トップページ
+        li.auth-form-nav__item
+          = link_to login_path, class: 'auth-form-nav__item-link' do
+            | サインイン
+        li.auth-form-nav__item
+          = link_to login_path, class: 'auth-form-nav__item-link' do
+            | 秘密保持契約書
