--- a/app/views/practices/index.html.slim
+++ b/app/views/practices/index.html.slim
@@ -13,7 +13,7 @@ header.page-header
             h2.categories-item__title= category.name
           .card-block
             .js-target-blank.is-long-text-style
-              = rendering(emojify(category.description)).html_safe            
+              = markdown emojify(category.description)
           .category-practices
             = render category.practices
     = link_to t('new_practice'), new_practice_path, class: 'btn btn-primary'
