--- a/app/views/pages/new.html.slim
+++ b/app/views/pages/new.html.slim
@@ -4,4 +4,4 @@ header.page-header
 
 .page-body
   .container
-    = render "form", page: @page, url: "/pages"
+    = render "form", page: @page, method: "POST", url: "/pages"
