--- a/app/views/pages/edit.html.slim
+++ b/app/views/pages/edit.html.slim
@@ -4,4 +4,4 @@ header.page-header
 
 .page-body
   .container
-    = render 'form', page: @page, url: "/pages/#{@page.title}"
+    = render 'form', page: @page, method: "PATCH", url: "/pages/#{@page.title}"
